# yisu

./: .gitignore  .windsurfrules  __init__.py  main.py  pyproject.toml  uvx.yaml
.chromadb/: chroma.sqlite3
.github/: copilot-instructions.md
chromadb/: __init__.py
dbtools/: __init__.py  chroma_utils.py
docs/: memory_usage_guide.md
memory/: __init__.py  memory.py  memory_service.py
scripts/: run.py
tests/: conftest.py  test_chroma_utils.py  test_mcp_memory.py  test_memory_service.py
yisu_chromadb/: __init__.py  chroma_utils.py
