[project]
name = "yisu-chromadb"
version = "0.1.0"
description = "ChromaDB utilities"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=0.6.3",
    "openai>=1.68.2",
    "sentence-transformers",
    "python-dotenv",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
]

[project.scripts]
yisu-chromadb = "main:main"  # 直接使用根目录的main.py

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

