[project]
name = "yisu"
version = "0.1.0"
description = "ChromaDB utilities"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=0.6.3",
    "openai>=1.68.2",
    "sentence-transformers",
    "python-dotenv",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "mcp[cli]>=1.5.0",
]

[project.scripts]
yisu = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

